<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_usage"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_usage" />

    <item
        android:id="@+id/navigation_add_data"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_add_data" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_complaints"
        android:icon="@drawable/complaint"
        android:title="@string/title_complaints" />

</menu>
