<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreens.AddData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/gb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btnshape_add_data"
            android:text="@string/add_1gb_250_lkr"
            android:textColor="#0277BD"
             />

        <Button
            android:id="@+id/gb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btnshape_add_data"
            android:text="@string/add_2gb_500_lkr"
            android:textColor="#0277BD"
             />

        <Button
            android:id="@+id/gb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btnshape_add_data"
            android:text="@string/add_5gb_750_lkr"
            android:textColor="#0277BD"
             />

        <Button
            android:id="@+id/gbMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btnshape_add_data"
            android:text="@string/beyond_5gb_150_00_lkr_per_gb"
            android:textColor="#0277BD"
             />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnPayNow"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape_login"
            android:padding="3dp"
            android:text="PAY NOW"
            android:textColor="#5189B3"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/addToBill"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btnshape_reset"
            android:text="ADD TO BILL"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taxes"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>
</FrameLayout>